tests/baselines/reference/tsxUnionElementType4.errors.txt
file.tsx(32,17): error TS2322: Type 'true' is not assignable to type 'never'.
file.tsx(33,21): error TS2322: Type '{ x: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
  Property 'x' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
file.tsx(34,22): error TS2322: Type '{ prop: true; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.
  Property 'prop' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.


==== file.tsx (3 errors) ====
    import React = require('react');
    
    class RC1 extends React.Component<{x : number}, {}> {
        render() {
            return null;
        }
    }
    
    class RC2 extends React.Component<{ x: string }, {}> {
        render() {
            return null;
        }
        private method() { }
    }
    
    class RC3 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    class RC4 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    var RCComp = RC1 || RC2;
    var EmptyRCComp = RC3 || RC4;
    var PartRCComp = RC1 || RC4;
    // Error
    let a = <RCComp x />;
                    ~
!!! error TS2322: Type 'true' is not assignable to type 'never'.
!!! related TS6500 file.tsx:3:36: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC1 | RC2> & { x: number; } & { children?: ReactNode; } & { x: string; } & { children?: ReactNode; }'
    let b = <PartRCComp x={10} />
                        ~
!!! error TS2322: Type '{ x: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
!!! error TS2322:   Property 'x' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
    let c = <EmptyRCComp prop />;
                         ~~~~
!!! error TS2322: Type '{ prop: true; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.
!!! error TS2322:   Property 'prop' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.
    